update makefiles, last must create first child as 5 with int = 5

--- a/0_Colleen/C/Makefile
+++ b/0_Colleen/C/Makefile
@@ -17,10 +17,10 @@ $(NAME): $(OBJ)
 
 # CLEANERS
 clean:
-	-rm $(OBJ)
-	-rm tmp.log
+	-rm -f $(OBJ)
+	-rm -f tmp.log
 fclean: clean
-	-rm $(NAME)
+	-rm -f $(NAME)
 re: fclean all
 
 test: all
